load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# Export parameter files for tests
exports_files([
    "rna_turner1999.par",
    "rna_turner2004.par",
])

# Core library with all the FFTbor functionality
cc_library(
    name = "fftbor_core",
    srcs = [
        "delta.cpp",
        "globals.cpp",
        "misc.cpp",
        "parameter_parser.cpp",
    ],
    hdrs = [
        "delta.h",
        "energy_const.h",
        "energy_par.h",
        "memory_types.h",
        "misc.h",
        "parameter_parser.h",
        "params.h",
    ],
    copts = [
        "-std=c++17",
        "-O3",
        "-funroll-loops",
        "-ffast-math",
        "-Wall",
        "-Wextra",
        "-Wno-write-strings",
    ],
    linkopts = ["-lm"],
    visibility = ["//visibility:public"],
    deps = ["@fftw//:fftw3"],
)

# Main executable
cc_binary(
    name = "FFTbor",
    srcs = ["main.cpp"],
    copts = [
        "-std=c++17",
        "-O3",
        "-Wall",
        "-Wextra",
        "-Wno-write-strings",
    ],
    data = [
        "rna_turner1999.par",
        "rna_turner2004.par",
    ],
    deps = [":fftbor_core"],
)
